--- a/scss/base/_scss.scss
+++ b/scss/base/_scss.scss
@@ -4,3 +4,7 @@ $color-tercero: #d8b1af;
 $color-secundario: #E34B64;
 $fuente-principal: "Cookie", cursive;
 $fuente-secundaria: "Space Grotesk", sans-serif;
+$tamano-principal: 40px;
+$tamano-secundario: 30px;
+$tamano-terciario: 12px;
+
