--- a/scss/components/_main.scss
+++ b/scss/components/_main.scss
@@ -38,6 +38,7 @@
 
         h2 {
             font-family: $fuente-principal; // Fuente para el título
+            font-size: $tamano-principal;
             margin-bottom: 20px; // Espacio debajo del título
             text-align: center;
         }
@@ -65,6 +66,7 @@
 
     h2 {
         font-family: $fuente-principal;
+        font-size: $tamano-principal;
         
     }
 
@@ -87,6 +89,7 @@
 
             h3 {
                 font-family: $fuente-principal;
+                font-size: $tamano-secundario;
                 margin-top: 25px;
             }
             a{
@@ -115,7 +118,7 @@
     font-family: $fuente-principal;
 
     h2 {
-        font-size: 40px; // Tamaño del título
+        font-size: $tamano-principal;
         margin: 20px 0; // Margen alrededor del título
         text-align: center; // Centrar el texto
     }
@@ -146,10 +149,12 @@
 
             h3 {
                 margin: 10px 0; // Margen alrededor del título
+                font-size: $tamano-secundario;
             }
 
             p {
-                margin: 10px 0; // Margen alrededor del párrafo
+                margin: 10px 0; 
+                font-family: $fuente-secundaria;// Margen alrededor del párrafo
             }
         }
     }
@@ -163,7 +168,7 @@
     right: 50px;
 
     i {
-        font-size: 60px;
+        font-size: $tamano-principal;
     }
 }
 
@@ -179,7 +184,7 @@
     h1 {
         text-align: center;
         padding: 20px 0;
-        font-size: 50px;
+        font-size: $tamano-principal;
         font-family: $fuente-principal;
         text-shadow: 5px 5px 4px rgba(163, 49, 49, 0.5);
     }
@@ -216,7 +221,7 @@
     h1 {
         text-align: center;
         padding: 20px 0;
-        font-size: 50px;
+        font-size: $tamano-principal;
         font-family: $fuente-principal;
         text-shadow: 5px 5px 4px rgba(163, 49, 49, 0.5);
         color: white;
@@ -258,7 +263,7 @@
     h1 {
         text-align: center;
         padding: 20px 0;
-        font-size: 50px;
+        font-size: $tamano-principal;
         font-family: $fuente-principal;
         text-shadow: 5px 5px 4px rgba(163, 49, 49, 0.5);
     }
@@ -340,7 +345,7 @@
         background-color: $color-principal;
         width: 850px;
         margin-bottom: 35px;
-        font-size: 35px;
+        font-size: $tamano-secundario;
         font-family: $fuente-principal;
         color: white;
         margin-left: -150px; // Ajusta este valor según sea necesario
